attempting to fix header issues for ie7 (unsuccessfully it seems...).  adjusting pageguide message background color for IE 7/8.  also attempting to fix mCustomScrollbar issues with IE 7/8.

--- a/media/marco-proto/assets/css/pageguide.css
+++ b/media/marco-proto/assets/css/pageguide.css
@@ -433,6 +433,10 @@
   position: fixed;
   width: 90%;
   z-index: 1001;
+  /* For IE 5.5 - 7*/
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#bb000000, endColorstr=#bb000000);
+  /* For IE 8*/
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#bb000000, endColorstr=#bb000000)";
 }
 #pageGuideWrapper #pageGuideMessage span {
   -webkit-touch-callout: none;
